# frog

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  devenv.nix  devenv.yaml  frog.py  justfile  lang.py  p1.lang  procs.lang  pyproject.toml  sb.py  test.py  test_dump.txt
docs/: README.md  language.md  testing.md
examples/: 00_empty.lang  01_simple.lang  02_while.frog  03_fib.lang  04_procs.frog  05_is_prime.frog  06_let.frog  07_rule30.frog  08_gcd_grid.frog  README.md
frog/: __init__.py  __main__.py  logs.py  sb.py  types.py
ide/vscode/: frog_grammar.json  package.json
test/: 00_empty.out  01_simple.out  02_while.out  03_fib.out  04_procs.out  05_is_prime.out  06_let.out  07_rule30.out  08_gcd_grid.out  __main__.py  cli.out  code.out
test/snapshots/cli/: log_levels.out  trace_examples.out  usage_errors.out
test/snapshots/code/: arithmetic.out  basics.out  booleans.out  casts_and_memory.out  comparisons.out  if_blocks.out  int_bool_type_errors.out  literals_and_comments.out  macros.out  procedures.out  stack_intrinsics.out  while_blocks.out  words.out
test/snapshots/examples/: 00_empty.out  01_simple.out  02_while.out  03_fib.out  04_procs.out  05_is_prime.out  06_let.out  07_rule30.out  08_gcd_grid.out
test/snapshots/imports/: alias_does_not_bind_original_name.out  canonical_import_paths_share_module.out  conflict_import_then_local_macro.out  conflict_import_then_local_proc.out  conflict_local_proc_then_import.out  conflict_two_imports_same_alias.out  conflict_two_imports_same_name.out  diamond_reexports.out  direct_import_cycle.out  import_proc.out  (+30 more)
